  Entities.getOriginalKeys() added, old getKeys() with originalValue boolean parameter now private
  Entities.getValues() and getDistinctValues() streamlined, getDistinctValuesIncludingNull() added
  EntityConnection.selectMany() renamed to select()
  Entity.ConditionProvider.getConditionString(), propertyIds parameter added
  WhereCondition moved from db-local to db.condition in db-core, now an interface, Conditions.whereCondition() added
  Domain.key() overloaded with integer and long value parameter
  SwingEntityModelProvider, EntityPanelProvider, some refactoring, and more refactoring
  EntityTestUnit.initializeReferenceEntity() can now return null without crashing the test
  Using built-in javadoc and sources jar Gradle functionality
  Domain.keys() added, overloaded for Integer and Long
  Domain.StringProvider moved up
  Domain.Validator moved up to DefaultValidator
  DefaultValueMap.DefaultValidator moved up and renamed DefaultValueMapValidator
  domain.DefaultValidator renamed to DefaultEntityValidator
  ServerException moved to common.remote.exception, inner classes moved up
  Removed unnecessary writeObject() and readObject() implementations
  Event, State and Value moved to common.event, common.state and common.value packages respectively
  Inner classes in common.event, common.state and common.value packages moved up a level
  Entity.Definition.Provider added, implemented by Domain, DefaultEntity now uses the former instead of the latter
  ColumnProperty and DefaultColumnProperty no longer use ForeignKeyProperty, plus some further refactoring reducing cyclic dependencies
  DefaultWhereCondition no longer depends on Conditions
  DefaultForeignKeyProperty checks readOnly status before propagating
  ValueMap.copy(), getOriginalCopy() and getInstance() removed
  Domain.copyEntity(), deepCopyEntity() and copyKey() added
  DefaultValueMap and DefaultEntity refactored a bit, put() now final, DefaultValueMap.validateAndPrepare() added, minor performance penalty