@@ -5317,3 +5317,5 @@
   ValueMap.copy(), getOriginalCopy() and getInstance() removed
   Domain.copyEntity(), deepCopyEntity() and copyKey() added
   DefaultValueMap and DefaultEntity refactored a bit, put() now final, DefaultValueMap.validateAndPrepare() added, minor performance penalty
+  ControlProvider.createCheckBox() bug fixed, did not create a TristateCheckBox when button model was TristateButtonModel
+  PropertyStore.propertyValue(), nullValue parameter added, false by default for Boolean values
